# AgentCode

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
docs/: automation.md
projects/agentci/: CONTRIBUTING.md  README.md  pyproject.toml
projects/agentci/.github/workflows/: ci.yml
projects/agentci/docs/: adapters.md  pytest.md
projects/agentci/examples/: langgraph_episode.json  langgraph_integration.py  make_candidate_episode.py  math_agent.py  math_diff.html  math_episode.json  math_episode_candidate.json  math_episode_latency_candidate.json  openai_agents_episode.json  openai_agents_integration.py  test_regression_pytest.py
projects/agentci/src/agentci/: __init__.py  cli.py  compare.py  flaky.py  html_report.py  pytest_plugin.py  regression.py  replay.py  schema.py  trace.py
projects/agentci/src/agentci/adapters/: __init__.py  langgraph.py  openai_agents.py
projects/agentci/tests/: test_agentci.py
projects/failmap/: README.md  pyproject.toml
projects/failmap/examples/: baseline_clusters.json  candidate_clusters.json  clusters.json  compare.json  compare.md  release3_clusters.json  report.md  trends.json  trends.md  triage_rules.json
projects/failmap/examples/bundle/: SUMMARY.md  bundle.json
projects/failmap/examples/issues/: 001-new-failure-tool-call-db-lookup.md  002-growing-failure-tool-call-web-search.md  manifest.json
projects/failmap/examples/sample_pack/: manifest.json
projects/failmap/examples/sample_pack/cases/: 001-billing-timeout-a.json  002-billing-timeout-b.json  003-assertion-failed-a.json  004-assertion-failed-b.json
projects/failmap/src/failmap/: __init__.py  cli.py  cluster.py  compare.py  io.py  issues.py  report.py  routing.py  trends.py
projects/failmap/tests/: test_failmap.py
projects/packslice/: README.md  pyproject.toml
projects/packslice/examples/failure_only/: summary.json
projects/packslice/examples/failure_only/eval/: manifest.json
projects/packslice/examples/failure_only/test/: manifest.json
projects/packslice/examples/failure_only/test/cases/: 006-assert-c.json
projects/packslice/examples/failure_only/train/: manifest.json
projects/packslice/examples/sample_pack/: manifest.json
projects/packslice/examples/sample_pack/cases/: 005-assert-b.json
projects/packslice/examples/split_demo/: REPORT.md  summary.json
projects/packslice/examples/split_demo/eval/: manifest.json
projects/packslice/examples/split_demo/eval/cases/: 002-billing-b.json
projects/packslice/examples/split_demo/test/: manifest.json
projects/packslice/examples/split_demo/test/cases/: 003-billing-c.json
projects/packslice/examples/split_demo/train/: manifest.json
projects/packslice/examples/split_demo/train/cases/: 001-billing-a.json  004-assert-a.json
projects/packslice/src/packslice/: __init__.py  cli.py  io.py  report.py  splitter.py
projects/packslice/tests/: test_packslice.py
projects/tracepack/: README.md  pyproject.toml
projects/tracepack/examples/: demo_chat.jsonl  demo_pack.jsonl  make_sample_episodes.py
projects/tracepack/examples/demo_pack/: manifest.json
projects/tracepack/examples/demo_pack/cases/: 001-billing-timeout.json
projects/tracepack/examples/source_episodes/: billing-timeout.json  refund-success.json  search-success.json
projects/tracepack/src/tracepack/: __init__.py  builder.py  cli.py  export.py  io.py  model.py  redact.py  scanner.py  validator.py
projects/tracepack/tests/: test_tracepack.py
scripts/: run_automation_demo.sh
(+1 files in other folders)
