[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "failmap"
version = "0.1.0"
description = "Cluster recurring agent failures from TracePack packs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jasvina + Codex" }
]
license = "MIT"
keywords = ["agents", "failures", "clustering", "evals", "traces"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
failmap = "failmap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
