[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracepack"
version = "0.1.0"
description = "Build benchmark packs from real agent traces"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jasvina + Codex" }
]
license = "MIT"
keywords = ["agents", "evals", "dataset", "traces", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
tracepack = "tracepack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
